2006-11-08 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/robustness.xml: made test safe to
	  run by using the new 'areatest' operation; added
	  new testcases just raised on the mailing list.
	* tests/xmltester/Makefile.am: robustness.xml is now safe
	  to run, so run it on make check.
	* source/headers/geos/geom/BinaryOp.h: enable
	  COMMONBITS-removal heuristic so it is attempted
	  *before* geometry snapping.

---------  GEOS-3.0.0rc2 release [2006-11-05] --------------------------

2006-11-05 Sandro Santilli <strk@refractions.net>

	* capi/Makefile.am: distribute files needed for testing, proper
	  cleanup (make distcheck works now)

2006-11-03 Sandro Santilli <strk@refractions.net>

	* capi/testrunner.sh: report non-zero exit from
	  ./geostest run; fixed (hopefully) quoting of dollar signs.

2006-11-02 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/BinaryOp.h: disable debugging output
	  by default.
	* capi/geostest.c: updated to use the new GEOSGeometry typedef, so
	  to build w/out warnings and fully respecting current const
	  specification.
	* capi/geos_c.cpp, capi/geos_c.h.in: const-corrected and documented
	  GEOSPolygonize function.
	* capi/test.expected: updated expected version
	* capi/testrunner.sh: be happy with geostest running w/out
	  segfaulting, still run diff for reference.
	* configure.in: updated versions to 3.0.0rc2 / CAPI-1.3.0

2006-11-02 Markus Schaber <schabi@logix-tt.com>

	* capi/geos_c.h.in: add GEOSGeometry and GEOSCoordSequence
	  typedef, to unhide the pointer type and allow fine-grained
	  const specification, use the new typedefs in function signatures
	  (fix some const-specifications accordingly)
	* capi/geos_c.cpp: define GEOSGeometry and GEOSCoordSequence
	  for cross-checking of types in header.

2006-10-30 Markus Schaber <schabi@logix-tt.com>

	* capi/geos_c.cpp: more focused 'using' directives.
	* capi/geos_c.h.in: let the enum visible by geos_c.cpp