@@ -1,3 +1,7 @@
+2006-11-09 Sandro Santilli <strk@refractions.net>
+
+	* test/xmltester/XMLTester.cpp: improved 'testarea' test.
+
 2006-11-08 Sandro Santilli <strk@refractions.net>
 
 	* tests/xmltester/robustness.xml: made test safe to
